# RnD_test_case

./: README.md  pyproject.toml
data/: cat_code_dict.json  predictions.csv  test_preprocessed.csv  train_preprocessed.csv
src/: dataset.py  training.py
